syntax = "proto3";
package Channel;

message GetPresignedUrlDto {
  optional string fileName = 1;
  string userId = 2;
}

message ChannelCreateDto {
  string userId = 1;
  string handle = 2;
  string avatar = 3;
  optional string channelBio = 4;
  optional string channelCoverImage = 5;
  optional bool isChannelMonitized = 6;
  optional bool isChannelVerified = 7;
}

message ChannelActivateMonitizationDto {
  string id = 1;
}
message ChannelUpdateByIdDto {
  string id = 1;
  optional string channelBio = 2;
  optional string channelCoverImage = 3; 
}

message ChannelVerifyByIdDto {
  string id = 1;
}

message GetPreSignedUrlResponse {
  string response = 1;
  string fileIdentifier = 2;
  string presignedUrl = 3;
}

message ChannelCreatedResponse {
  string response = 1;
  string channelId = 2;
}

message ChannelMonitizationActivatedResponse {
  string response = 1;
  bool isMonitized = 2;
}

message ChannelUpdateByIdResponse {
  string response = 1;
}

message ChannelVerifyByIdResponse {
  string response = 1;
}

service ChannelService {
  rpc getPresignedUrlForFileUpload(GetPresignedUrlDto) returns (GetPreSignedUrlResponse) {}
  rpc createChannel(ChannelCreateDto) returns (ChannelCreatedResponse) {}
  rpc activateMonitization(ChannelActivateMonitizationDto) returns (ChannelMonitizationActivatedResponse) {}
  rpc channelUpdateById(ChannelUpdateByIdDto) returns (ChannelUpdateByIdResponse) {}
  rpc channelVerify(ChannelVerifyByIdDto) returns (ChannelVerifyByIdResponse) {}
}